# linux-native-wrappers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: HavokCallbackBridge.md
src/: Havok.cpp  HavokThunk_bool_ptr_ptr.cpp  HavokThunk_float_ptr.cpp  HavokThunk_int_ptr_ptr_uint_ptr.cpp  HavokThunk_void_charptr.cpp  HavokThunk_void_charptr_int.cpp  HavokThunk_void_i64.cpp  HavokThunk_void_ptr.cpp  HavokThunk_void_ptr_int.cpp  HavokThunk_void_ptr_int_ptr.cpp  HavokThunk_void_ptr_ptr.cpp  HavokThunk_void_void.cpp  pe_loader.cpp  pe_loader.h  winlibs.cpp
tests/: thread_id_dll_attach.cpp
tools/: generate_havok_thunks.py  generate_havok_wrapper.py
